# trackers

./: .cursorignore  .gitignore  .pre-commit-config.yaml  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  download_command.py  index.html  mkdocs.yml  mypy.ini  pyproject.toml  siamese_net.py  tox.ini  versions.json
.github/: CODEOWNERS  LICENSE_HEADER.txt  dependabot.yml
.github/workflows/: build-docs.yml  build-package.yml  ci-build-docs.yml  ci-integration-tests.yml  ci-tests.yml  mypy-test.yml  publish-docs.yml  publish-pre-release.yml  publish-release.yml  stale-issues.yml  test-doc.yml  test.yml  uv-test.yml
2.1.0/: 404.html  index.html  objects.inv  sitemap.xml
2.1.0/learn/benchmarks/: index.html
2.1.0/learn/install/: index.html
2.1.0/trackers/bytetrack/: index.html
2.1.0/trackers/sort/: index.html
2.2.0/: 404.html  index.html  sitemap.xml
2.2.0/api/evals/: index.html
2.2.0/api/io/: index.html
2.2.0/api/motion/: index.html
2.2.0/api/trackers/: index.html
2.2.0/learn/evaluate/: index.html
2.2.0/learn/install/: index.html
2.2.0/learn/track/: index.html
2.2.0/trackers/bytetrack/: index.html
2.2.0/trackers/comparison/: index.html
2.2.0/trackers/sort/: index.html
demo/: README.md  app.py  requirements.txt
develop/: 404.html  index.html  objects.inv  sitemap.xml
develop/api-evals/: index.html
develop/api-trackers/: index.html
develop/api/evals/: index.html
develop/api/io/: index.html
develop/api/motion/: index.html
develop/api/trackers/: index.html
develop/javascripts/: command_builder.js
develop/learn/benchmarks/: index.html
develop/learn/evaluate/: index.html
develop/learn/install/: index.html
develop/learn/track/: index.html
develop/overrides/partials/: header.html
develop/search/: search_index.json
develop/trackers/bytetrack/: index.html
develop/trackers/comparison/: index.html
develop/trackers/core/deepsort/tracker/: index.html
develop/trackers/core/reid/reid/: index.html
develop/trackers/core/sort_tracker/: index.html
develop/trackers/sort/: index.html
develop/trackers/sort_tracker/: index.html
develop/trackers/utils/sort_utils/: index.html
docs/: api-trackers.md  cli.md  help.md  index.md  python.md
docs/api/: annotators.md  evals.md  io.md  motion.md  trackers.md  utils.md
docs/hooks/: doctest_filter.py
docs/how-to/: install.md
docs/javascripts/: cli_builder_framework.js  command_builder.js  copy-code.js
docs/learn/: benchmarks.md  evaluate.md  install.md  track.md
docs/models/: deepsort_backbone.md  deepsort_feature_extractor.md  siamese_network.md
docs/overrides/partials/: header.html
docs/overrides/stylesheets/: command_builder.css  style.css
docs/trackers/: bytetrack.md  comparison.md  deepsort_tracker.md  ocsort.md  sort.md  sort_tracker.md  utils.md
docs/trackers/core/: deepsort_tracker.md
docs/trackers/core/bytetrack/: tracker.md
docs/trackers/core/deepsort/: tracker.md
docs/trackers/core/ksp/: tracker.md
docs/trackers/core/ocsort/: tracker.md
docs/trackers/core/reid/: reid.md
docs/trackers/core/sort/: tracker.md
docs/trackers/utils/: torch_utils.md
preview/: 404.html  index.html  objects.inv  sitemap.xml
preview/api/evals/: index.html
preview/api/io/: index.html
preview/api/motion/: index.html
preview/api/trackers/: index.html
preview/javascripts/: pycon_copy.js
preview/learn/evaluate/: index.html
preview/learn/install/: index.html
preview/learn/track/: index.html
preview/trackers/bytetrack/: index.html
preview/trackers/comparison/: index.html
preview/trackers/sort/: index.html
prompts/: abewley-sort.txt  abhyantrika-nanonets_object_tracking.txt  open-mmlab-mmtracking.txt  roboflow-supervision.txt
search/: search_index.json
test/: conftest.py
test/core/: __init__.py  test_registration.py
test/core/reid/dataset/: test_base.py  test_market_1501.py
test/eval/: __init__.py  test_box.py  test_clear.py  test_evaluate.py  test_hota.py  test_identity.py  test_integration.py  test_io.py  test_matching.py
test/io_tests/: test_mot.py  test_outputs.py  test_video.py
test/scripts/: test_progress.py  test_track.py
test/test_io/: test_mot.py  test_outputs.py  test_video.py
trackers/: __init__.py  base.py  deepsort_tracker.py  sort_tracker.py  utils.py
trackers/annotators/: trace.py
trackers/core/: __init__.py  base.py
trackers/core/annoation/: __init__.py  triplet_annotator.py
trackers/core/botsort/: __init__.py  cmc.py  kalman_box_tracker.py  tracker.py
trackers/core/bytetrack/: example_usage.py  kalman.py  kalman_box_tracker.py  tests_bytetrack.py  tracker.py
trackers/core/deepsort/: feature_extractor.py  kalman_box_tracker.py  tracker.py
trackers/core/ksp/: solver.py  tracker.py
trackers/core/ksptracker/: InteractivePMapViewer.py  solver.py  tracker.py
trackers/core/oc-sort/: tracker.py
trackers/core/oc_sort/: __init__.py  kalman_box_tracker.py  tracker.py
trackers/core/ocsort/: association.py  filterpy_funcs.py  kalman_filter.py  kalman_filter_ocsort.py  tracker.py  tracklet.py  utils.py
trackers/core/reid/: __init__.py  model.py  utils.py
trackers/core/reid/dataset/: base.py  market_1501.py  sampling.py
trackers/core/reid/trainer/: base.py  callbacks.py  cross_entropy_trainer.py  metrics.py
trackers/core/reid/trainers/: __init__.py  commons.py  identity_trainer.py  triplets_trainer.py
trackers/core/sort/: kalman.py  kalman_box_tracker.py  tracker.py  utils.py
trackers/eval/: __init__.py  box.py  clear.py  constants.py  evaluate.py  hota.py  identity.py  io.py  matching.py  results.py
trackers/io/: __init__.py  datasets.py  mot.py  paths.py  video.py
trackers/models/: deepsort_backbone.py  deepsort_feature_extractor.py  siamese_network.py
trackers/motion/: estimator.py  transformation.py
trackers/scripts/: __main__.py  download.py  eval.py  progress.py  track.py
trackers/utils/: __init__.py  bbox_conversions.py  bytetrack_utils.py  converters.py  device.py  downloader.py  kalman_filter.py  ocsort_utils.py  sort_utils.py  torch_utils.py
(+3 files in other folders)
