[project]
name = "gtr"
version = "0.0.1"
description = "A unified library for object tracking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "supervision>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "uv>=0.4.20",
    "pytest>=8.3.3",
    "isort>=5.13.2",
    "black>=24.10.0",
    "ruff>=0.6.9",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-material>=9.5.39",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-jupyter>=0.25.0",
    "jupyter>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gtr"]

[tool.ruff]
target-version = "py313"
